--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-_site
+Gemfile.lock
+test/dest
+*.gem
+pkg/
+*.swp
+*~
+_site/
+.bundle/
+.DS_Store
+bbin/
+gh-pages/
+site/_site/
+coverage
+.ruby-version
+.sass-cache
+
